--- a/source/catalog.html
+++ b/source/catalog.html
@@ -26,8 +26,8 @@
           <li class="main-header__item">
             <a class="main-header__link" href="index.html">Главная</a>
           </li>
-          <li class="main-header__item  main-header__link--active">
-            <a class="main-header__link" href="#">Каталог продукции</a>
+          <li class="main-header__item">
+            <a class="main-header__link main-header__link--active" href="#">Каталог продукции</a>
           </li>
           <li class="main-header__item">
             <a class="main-header__link" href="form.html">Подбор программы</a>
@@ -44,7 +44,7 @@
           <li class="products__item">
 
             <div class="products__img-wrapper">
-              <img class="products__img" src="../img/products/ce-pro-chiken-550g.jpg" alt="Cat Energy PRO 500 г" width="68" height="86">
+              <img class="products__img" src="../img/products/ce-pro-chicken-500g.png" srcset="../img/products/ce-pro-chicken-500g@2x.png 2x" alt="Cat Energy PRO 500г с курицей" width="68" height="86">
             </div>
 
             <div class="products__item-wrapper">
@@ -70,7 +70,7 @@
           <li class="products__item">
 
             <div class="products__img-wrapper">
-              <img class="products__img" src="../img/products/ce-pro-chiken-1000g.jpg" alt="Cat Energy PRO 1000 г" width="84" height="100">
+              <img class="products__img" src="../img/products/ce-pro-chicken-1000g.png" srcset="../img/products/ce-pro-chicken-1000g@2x.png 2x" alt="Cat Energy PRO 1000г с курицей" width="84" height="100">
             </div>
 
             <div class="products__item-wrapper">
@@ -96,7 +96,7 @@
           <li class="products__item">
 
             <div class="products__img-wrapper">
-              <img class="products__img" src="../img/products/ce-pro-fish-550g.jpg" alt="Cat Energy PRO 500 г" width="68" height="78">
+              <img class="products__img" src="../img/products/ce-pro-fish-500g.png" srcset="../img/products/ce-pro-fish-500g@2x.png 2x" alt="Cat Energy PRO 500г с рыбой" width="68" height="78">
             </div>
 
             <div class="products__item-wrapper">
@@ -122,7 +122,7 @@
           <li class="products__item">
 
             <div class="products__img-wrapper">
-              <img class="products__img" src="../img/products/ce-pro-fish-1000g.jpg" alt="Cat Energy PRO 1000 г" width="84" height="100">
+              <img class="products__img" src="../img/products/ce-pro-fish-1000g.png" srcset="../img/products/ce-pro-fish-1000g@2x.png 2x" alt="Cat Energy PRO 1000г с рыбой" width="84" height="100">
             </div>
 
             <div class="products__item-wrapper">
@@ -148,7 +148,7 @@
           <li class="products__item">
 
             <div class="products__img-wrapper">
-              <img class="products__img" src="../img/products/ce-pro-buckwheat-500g.jpg" alt="Cat Energy slim 500 г" width="68" height="78">
+              <img class="products__img" src="../img/products/ce-slim-buckwheat-500g.png" srcset="../img/products/ce-slim-buckwheat-500g@2x.png 2x" alt="Cat Energy slim 500г с гречкой" width="68" height="78">
             </div>
 
             <div class="products__item-wrapper">
@@ -174,7 +174,7 @@
           <li class="products__item">
 
             <div class="products__img-wrapper">
-              <img class="products__img" src="../img/products/ce-pro-buckwheat-1000g.jpg" alt="Cat Energy slim 1000 г" width="84" height="100">
+              <img class="products__img" src="../img/products/ce-slim-buckwheat-1000g.png" srcset="../img/products/ce-slim-buckwheat-1000g@2x.png 2x" alt="Cat Energy slim 1000г с гречкой" width="84" height="100">
             </div>
 
             <div class="products__item-wrapper">
@@ -200,7 +200,7 @@
           <li class="products__item">
 
             <div class="products__img-wrapper">
-              <img class="products__img" src="../img/products/ce-pro-rice-500g.jpg" alt="Cat Energy slim 500 г" width="72" height="84">
+              <img class="products__img" src="../img/products/ce-slim-rice-500g.png" srcset="../img/products/ce-slim-rice-500g@2x.png 2x" alt="Cat Energy slim 500г c рисом" width="72" height="84">
             </div>
 
             <div class="products__item-wrapper">
@@ -283,7 +283,7 @@
         </div>
 
         <div class="location__map map">
-          <img class="map__image" src="img/map-mobile.jpg" alt="Местонахождение на карте" width="320" height="362">
+          <iframe class="map__frame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.609424611785!2d30.32097973974636!3d59.938622944914385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1682005257359!5m2!1sru!2sru" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
 
