--- a/source/index.html
+++ b/source/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body class="page__body">
+  <body class="page__body page__body-index">
 
-    <header class="main-header main-header--nojs">
+    <header class="main-header main-header-index main-header--nojs">
       <a class="main-header__logo-link" href="#">
         <svg xmlns="http://www.w3.org/2000/svg" width="34" height="38" fill="none" viewBox="0 0 34 38"><g clip-path="url(#a)"><path fill="#FDC305" d="M6.07 20.72v-2.26c6.68-.92 13.42-1.36 20.17-1.33 0 .6 0 1.21-.06 1.82a25.52 25.52 0 0 1 6-1.82A16.67 16.67 0 0 0 .19 20.39l5.88.33ZM27.24 24.23c-1.16 1.28-1.39 1.2-1.39 3.45v9.18A16.64 16.64 0 0 0 33.32 23a17.3 17.3 0 0 0-.32-3.1 33.1 33.1 0 0 0-5.76 4.33ZM6.36 25.72s-3.79-1.44-5.19-1.83A8.54 8.54 0 0 0 0 23.61a16.65 16.65 0 0 0 8.68 14L6.36 25.72Z"/><path fill="#F06351" d="M26.29 17.12A89.8 89.8 0 0 0 24.89.65S24.75-.64 24 .41c-.59 1.25-1 2.58-1.2 3.94a70.34 70.34 0 0 0-12.77.34C9.24 2 7.85.75 7.18 1c-.67.25-.72 3.31-.72 3.31l-.33 14.1c6.68-.9 13.42-1.34 20.16-1.29Z"/><path fill="#000" d="M12.41 14c0-.09 1 .68 1.41.92.41.24.61.42.61.59 0 .17-.27.34-.63.34s-.91-.12-1-.27h1.23A8.34 8.34 0 0 1 12.41 14ZM19.89 14.11l-1.09 1.33c0 .06-.17.35.18.3.41-.06.82-.16 1.22-.29.11 0 .07-.19-.11-.17-.18.02-.69.05-1 .11l.84-1.26s.07-.13-.04-.02ZM16.75 20.2c.46-.2.85-.56 1.09-1 .28-.65 0-.91-.44-1-.6-.11-1.22.01-1.74.34-.39.36-.34.72-.05 1 .35.27.73.49 1.14.66Z"/><path fill="#F06351" d="M16.35 21.45c-.11.23-.27.43-.46.6-.28.23-.63.36-1 .38a2.15 2.15 0 0 1-1.47-.43 2.3 2.3 0 0 1-.53-.44c-.1-.11-.22-.2-.36-.26 0 0 .75 4.1 2.57 4.75 1.82.65 2.14-.75 2.2-1.13a5.61 5.61 0 0 0-.82-3.23c-.02-.31-.03-.11-.13-.24Z"/><path fill="#000" d="M14.71 22.59a3.44 3.44 0 0 1-2.36-1.47.14.14 0 0 1 .03-.15.14.14 0 0 1 .2 0c.5.7 1.26 1.16 2.11 1.3a2.1 2.1 0 0 0 1.63-1l.14-.19.1.21s.37.76 1 .8c.63.04 1.05-.41 1.61-1.28a.14.14 0 0 1 .2 0 .15.15 0 0 1 .05.2c-.64 1-1.27 1.44-1.88 1.4a1.55 1.55 0 0 1-1.12-.76 2.26 2.26 0 0 1-1.71.94Z"/><path fill="#F06351" d="M26.24 18.92a58.63 58.63 0 0 0-5.07 5.19A31.63 31.63 0 0 1 15.88 29c-.22-.53-1.62-1.51-1.62-1.51s-3.13-2.14-5.18-3.82a34.14 34.14 0 0 1-3.13-3l-2-.11c2.89 4.2 7.12 7.3 12 8.8.86-.14 3.27-1.86 5.07-3.26a58.13 58.13 0 0 0 5.94-5.89c.5-.59.89-1.27 1.14-2-1.1.39-1.86.71-1.86.71Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 0h33.32v37.61H0z"/></clipPath></defs></svg>
       </a>
@@ -24,13 +24,13 @@
         </button>
         <ul class="main-header__list">
           <li class="main-header__item">
-            <a class="main-header__link main-header__link--active" href="#">Главная</a>
+            <a class="main-header__link main-header__link-index main-header__link-index--active" href="#">Главная</a>
           </li>
           <li class="main-header__item">
-            <a class="main-header__link" href="catalog.html">Каталог продукции</a>
+            <a class="main-header__link main-header__link-index" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-header__item">
-            <a class="main-header__link" href="form.html">Подбор программы</a>
+            <a class="main-header__link main-header__link-index" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -41,7 +41,11 @@
       <section class="promo">
         <h1 class="promo__title">Функциональное <br> питание для котов</h1>
         <p class="promo__description">Занялся собой? Займись котом!</p>
-        <img class="promo__image" src="img/index/promo-product.png" alt="Баночка Cat Energy Курица" width="280" height="270">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/index/promo-desktop.png 1x, img/index/promo-desktop@2x.png 2x">
+          <source media="(min-width: 769px)" srcset="img/index/promo-tablet.png 1x, img/index/promo-tablet@2x.png 2x">
+          <img class="promo__image" src="img/index/promo-mobile.png" srcset="img/index/promo-mobile@2x.png 2x" alt="Баночка Cat Energy Курица" width="280" height="270">
+        </picture>
         <button class="promo__button" type="button">Подобрать программу</button>
       </section>
 
@@ -104,20 +108,23 @@
         </div>
 
         <div class="cat">
-          <img class="cat__image" src="img/index/cat-fat.png" alt="Толстый кот" width="280" height="256">
+          <picture>
+            <source media="(min-width: 769px)" srcset="img/index/cat-fat-tablet.png 1x, img/index/cat-fat-tablet@2x.png 2x">
+            <img class="cat__image" src="img/index/cat-fat-mobile.png" srcset="img/index/cat-fat-mobile@2x.png 2x" alt="Толстый кот" width="280" height="256">
+          </picture>
         </div>
       </section>
     </main>
 
     <footer class="main-footer">
       <div class="main-footer__location location">
-        <div class="location__adress adress">
+        <div class="location__adress adress adress-index">
           <p class="adress__call">приглашаем к сотрудничеству дилеров!</p>
           <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
 
         <div class="location__map map">
-          <img class="map__image" src="img/map-mobile.jpg" alt="Местонахождение на карте" width="320" height="362">
+          <iframe class="map__frame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.609424611785!2d30.32097973974636!3d59.938622944914385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1682005257359!5m2!1sru!2sru" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
 
