--- a/source/index.html
+++ b/source/index.html
@@ -13,12 +13,16 @@
   <body class="page__body page__body-index">
 
     <header class="main-header main-header-index main-header--nojs">
-      <a class="main-header__logo-link" href="#">
-        <svg xmlns="http://www.w3.org/2000/svg" width="34" height="38" fill="none" viewBox="0 0 34 38"><g clip-path="url(#a)"><path fill="#FDC305" d="M6.07 20.72v-2.26c6.68-.92 13.42-1.36 20.17-1.33 0 .6 0 1.21-.06 1.82a25.52 25.52 0 0 1 6-1.82A16.67 16.67 0 0 0 .19 20.39l5.88.33ZM27.24 24.23c-1.16 1.28-1.39 1.2-1.39 3.45v9.18A16.64 16.64 0 0 0 33.32 23a17.3 17.3 0 0 0-.32-3.1 33.1 33.1 0 0 0-5.76 4.33ZM6.36 25.72s-3.79-1.44-5.19-1.83A8.54 8.54 0 0 0 0 23.61a16.65 16.65 0 0 0 8.68 14L6.36 25.72Z"/><path fill="#F06351" d="M26.29 17.12A89.8 89.8 0 0 0 24.89.65S24.75-.64 24 .41c-.59 1.25-1 2.58-1.2 3.94a70.34 70.34 0 0 0-12.77.34C9.24 2 7.85.75 7.18 1c-.67.25-.72 3.31-.72 3.31l-.33 14.1c6.68-.9 13.42-1.34 20.16-1.29Z"/><path fill="#000" d="M12.41 14c0-.09 1 .68 1.41.92.41.24.61.42.61.59 0 .17-.27.34-.63.34s-.91-.12-1-.27h1.23A8.34 8.34 0 0 1 12.41 14ZM19.89 14.11l-1.09 1.33c0 .06-.17.35.18.3.41-.06.82-.16 1.22-.29.11 0 .07-.19-.11-.17-.18.02-.69.05-1 .11l.84-1.26s.07-.13-.04-.02ZM16.75 20.2c.46-.2.85-.56 1.09-1 .28-.65 0-.91-.44-1-.6-.11-1.22.01-1.74.34-.39.36-.34.72-.05 1 .35.27.73.49 1.14.66Z"/><path fill="#F06351" d="M16.35 21.45c-.11.23-.27.43-.46.6-.28.23-.63.36-1 .38a2.15 2.15 0 0 1-1.47-.43 2.3 2.3 0 0 1-.53-.44c-.1-.11-.22-.2-.36-.26 0 0 .75 4.1 2.57 4.75 1.82.65 2.14-.75 2.2-1.13a5.61 5.61 0 0 0-.82-3.23c-.02-.31-.03-.11-.13-.24Z"/><path fill="#000" d="M14.71 22.59a3.44 3.44 0 0 1-2.36-1.47.14.14 0 0 1 .03-.15.14.14 0 0 1 .2 0c.5.7 1.26 1.16 2.11 1.3a2.1 2.1 0 0 0 1.63-1l.14-.19.1.21s.37.76 1 .8c.63.04 1.05-.41 1.61-1.28a.14.14 0 0 1 .2 0 .15.15 0 0 1 .05.2c-.64 1-1.27 1.44-1.88 1.4a1.55 1.55 0 0 1-1.12-.76 2.26 2.26 0 0 1-1.71.94Z"/><path fill="#F06351" d="M26.24 18.92a58.63 58.63 0 0 0-5.07 5.19A31.63 31.63 0 0 1 15.88 29c-.22-.53-1.62-1.51-1.62-1.51s-3.13-2.14-5.18-3.82a34.14 34.14 0 0 1-3.13-3l-2-.11c2.89 4.2 7.12 7.3 12 8.8.86-.14 3.27-1.86 5.07-3.26a58.13 58.13 0 0 0 5.94-5.89c.5-.59.89-1.27 1.14-2-1.1.39-1.86.71-1.86.71Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 0h33.32v37.61H0z"/></clipPath></defs></svg>
+      <a class="main-header__logo-link" href="index.html">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/logo/logo-desktop.svg" width="202" height="59">
+          <source media="(min-width: 769px)" srcset="img/logo/logo-tablet.svg" width="174" height="52">
+          <img class="main-header__hero-logo" src="img/logo/logo-mobile.svg" alt="Логотип компании" width="33" height="38">
+        </picture>
       </a>
 
       <a class="main-header__logo-link-text" href="#">
-        <svg xmlns="http://www.w3.org/2000/svg" width="101" height="18" fill="none" viewBox="0 0 143 27"><path fill="#111" d="M1.8 24.4c-1.3-1.8-2-4-1.8-6.2V8.9c-.2-2.2.4-4.5 1.7-6.3C2.9 1 4.8.4 7.6.4c2.8 0 4.6.7 5.7 2A8 8 0 0 1 15 7.7V10H9.5V7.5c0-.8 0-1.5-.3-2.3a1.6 1.6 0 0 0-1.6-.9c-.8 0-1.3.3-1.6.8-.2.8-.3 1.7-.3 2.5v12c0 .7 0 1.5.4 2.3.3.5.8.8 1.6.8s1.2-.3 1.5-.8l.3-2.4v-2.7H15v2.3c0 2-.5 4-1.7 5.6-1.1 1.3-3 2-5.7 2-2.7-.1-4.7-.8-5.8-2.3ZM21.6.8h6.3l4.7 25.4h-5.1l-1-5.3H23l-.9 5.3h-5.2L21.6.8ZM26 17.5l-1.3-10-1.3 10H26ZM36.5 5h-3.8V.8H46v4.1h-3.8v21.3h-5.7V5ZM56.2.8H66v2.7h-6.3v8.3h5.1v2.6h-5.1v9.4H66v2.5H56V.8h.2ZM69 .8h2.4l7.3 16.8V.8h2.9v25.4h-2.3L72 8.8v17.4h-3V.8ZM85 .8h9.8v2.7h-6.4v8.3h5.1v2.6h-5.1v9.4h6.4v2.5h-9.9V.8ZM97.7.8h5.1c2-.2 4 .4 5.7 1.5 1.2 1 1.8 2.8 1.8 5.2 0 3.2-1 5.2-3.1 5.9l3.5 12.7h-3.4l-3.4-12h-2.8v12h-3.6V.8h.2Zm4.9 11c1.1 0 2.3-.3 3.2-1 .7-.5 1-1.7 1-3.3 0-.9 0-1.7-.3-2.5-.3-.6-.7-1-1.2-1.3-.8-.4-1.7-.5-2.5-.5h-1.6v8.4h1.4v.1ZM114.8 24.3c-1.2-2-1.8-4.2-1.6-6.4V9.4c0-1.6.1-3.3.5-4.8a5.7 5.7 0 0 1 2.2-3c1.2-.7 2.7-1 4.1-1 2.4 0 4 .6 5 1.9a8.5 8.5 0 0 1 1.6 5.5v1h-3.4V8c0-.9 0-1.8-.2-2.7 0-.6-.4-1.2-.9-1.5-.6-.4-1.3-.6-2-.6-.9 0-1.7.2-2.3.7a2.5 2.5 0 0 0-1 1.8l-.1 3v9.5c-.1 1.4.1 2.9.6 4.2.5 1 1.4 1.3 2.7 1.3a2.7 2.7 0 0 0 2.7-1.4c.6-1.4.8-3 .8-4.4v-1.8h-3.3v-2.6h6.5v12.6h-2.2l-.4-2.9a4.6 4.6 0 0 1-4.5 3.3 5.6 5.6 0 0 1-4.8-2.3ZM133.9 17.3 128.4.9h3.3l4 12.3L139.3.9h3.4l-5.5 16.4v9H134v-9h-.1Z"/></svg>
+        <img src="img/logo/cat-energy-text.svg" alt="Кэт Энерджи" width="101" height="18">
       </a>
 
       <nav class="main-header__nav main-header__nav--closed main-header__nav--nojs">
@@ -49,7 +53,7 @@
           <source media="(min-width: 769px)" srcset="img/index/promo-tablet.png 1x, img/index/promo-tablet@2x.png 2x">
           <img class="promo__image" src="img/index/promo-mobile.png" srcset="img/index/promo-mobile@2x.png 2x" alt="Баночка Cat Energy Курица" width="280" height="270">
         </picture>
-        <button class="promo__button" type="button">Подобрать программу</button>
+        <a class="promo__button" href="form.html">Подобрать программу</a>
       </section>
 
       <section class="catalog">
@@ -122,8 +126,12 @@
     <footer class="main-footer">
       <div class="main-footer__location location">
         <div class="location__adress adress adress-index">
-          <p class="adress__call">приглашаем к сотрудничеству дилеров!</p>
-          <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <p class="adress__call">приглашаем &emsp; &emsp; к сотрудничеству дилеров!</p>
+
+          <div class="adress__wrapper">
+            <p class="adress__text">ул. Большая Конюшенная, д. 19/8</p>
+            <p class="adress__text adress__city">Санкт-Петербург</p>
+          </div>
         </div>
 
         <div class="location__map map">
