--- a/source/catalog.html
+++ b/source/catalog.html
@@ -22,7 +22,9 @@
       </a>
 
       <a class="main-header__logo-link-text" href="#">
-        <img class="main-header__text-logo" src="img/logo/cat-energy-text.svg" alt="Cat Energy текст" width="102" height="19">
+        <svg class="main-header__text-logo" width="102" height="19" role="img" aria-label="Логотип Cat Energy">
+          <use href="../img/sprite.svg#logo-text"></use>
+        </svg>
       </a>
 
       <nav class="main-header__nav main-header__nav--closed main-header__nav--nojs">
@@ -328,9 +330,11 @@
       </div>
 
       <div class="main-footer__bottom bottom">
-        <svg class="bottom__link-img" xmlns="http://www.w3.org/2000/svg" width="143" height="24" viewBox="0 0 143 27" role="img" aria-label="Логотип Cat Energy">
-          <path fill="#111" d="M1.8 24.4c-1.3-1.8-2-4-1.8-6.2V8.9c-.2-2.2.4-4.5 1.7-6.3C2.9 1 4.8.4 7.6.4c2.8 0 4.6.7 5.7 2A8 8 0 0 1 15 7.7V10H9.5V7.5c0-.8 0-1.5-.3-2.3a1.6 1.6 0 0 0-1.6-.9c-.8 0-1.3.3-1.6.8-.2.8-.3 1.7-.3 2.5v12c0 .7 0 1.5.4 2.3.3.5.8.8 1.6.8s1.2-.3 1.5-.8l.3-2.4v-2.7H15v2.3c0 2-.5 4-1.7 5.6-1.1 1.3-3 2-5.7 2-2.7-.1-4.7-.8-5.8-2.3ZM21.6.8h6.3l4.7 25.4h-5.1l-1-5.3H23l-.9 5.3h-5.2L21.6.8ZM26 17.5l-1.3-10-1.3 10H26ZM36.5 5h-3.8V.8H46v4.1h-3.8v21.3h-5.7V5ZM56.2.8H66v2.7h-6.3v8.3h5.1v2.6h-5.1v9.4H66v2.5H56V.8h.2ZM69 .8h2.4l7.3 16.8V.8h2.9v25.4h-2.3L72 8.8v17.4h-3V.8ZM85 .8h9.8v2.7h-6.4v8.3h5.1v2.6h-5.1v9.4h6.4v2.5h-9.9V.8ZM97.7.8h5.1c2-.2 4 .4 5.7 1.5 1.2 1 1.8 2.8 1.8 5.2 0 3.2-1 5.2-3.1 5.9l3.5 12.7h-3.4l-3.4-12h-2.8v12h-3.6V.8h.2Zm4.9 11c1.1 0 2.3-.3 3.2-1 .7-.5 1-1.7 1-3.3 0-.9 0-1.7-.3-2.5-.3-.6-.7-1-1.2-1.3-.8-.4-1.7-.5-2.5-.5h-1.6v8.4h1.4v.1ZM114.8 24.3c-1.2-2-1.8-4.2-1.6-6.4V9.4c0-1.6.1-3.3.5-4.8a5.7 5.7 0 0 1 2.2-3c1.2-.7 2.7-1 4.1-1 2.4 0 4 .6 5 1.9a8.5 8.5 0 0 1 1.6 5.5v1h-3.4V8c0-.9 0-1.8-.2-2.7 0-.6-.4-1.2-.9-1.5-.6-.4-1.3-.6-2-.6-.9 0-1.7.2-2.3.7a2.5 2.5 0 0 0-1 1.8l-.1 3v9.5c-.1 1.4.1 2.9.6 4.2.5 1 1.4 1.3 2.7 1.3a2.7 2.7 0 0 0 2.7-1.4c.6-1.4.8-3 .8-4.4v-1.8h-3.3v-2.6h6.5v12.6h-2.2l-.4-2.9a4.6 4.6 0 0 1-4.5 3.3 5.6 5.6 0 0 1-4.8-2.3ZM133.9 17.3 128.4.9h3.3l4 12.3L139.3.9h3.4l-5.5 16.4v9H134v-9h-.1Z"/>
-        </svg>
+        <a class="bottom__link" href="#">
+          <svg class="bottom__link-img" width="143" height="24" role="img" aria-label="Логотип Cat Energy">
+            <use href="../img/sprite.svg#logo-text"></use>
+          </svg>
+        </a>
 
         <div class="main-footer__bottom-social social">
           <h2 class="visually-hidden">Социальные сети</h2>
@@ -348,9 +352,9 @@
         </div>
 
         <div class="bottom__copyright copyright">
-          <a class="copyright__link" href="#">HTML Academy
-            <svg class="copyright__link-img" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Логотип разработчика" width="27" height="34" fill="none" viewBox="0 0 27 34">
-              <path fill="#666" d="M13.64.02 13.5 0 0 1.4v24.61L13.5 34 27 26.01V1.41L13.64 0Zm11.6 25L13.5 31.96 1.77 25.02v-10.1l11.68 6.93.02 1.25-8.02-4.75v1.23l8.04 4.8.02 1.3-8.05-4.76v1.22l8.04 4.81 8.12-4.83V16.9l3.62-2.15v10.26Zm0-11.57L22 15.33l-1.48.88-7.06-4.19-.01 1.23 6.04 3.57-.06.03-.13.07-.86.5-4.98-2.95-.01 1.22 3.93 2.33-.93.61-.02.01-2.97-1.74-.01 1.23 1.94 1.13-1.98 1.19L1.8 13.58l11.63-6.96 11.8 6.83Zm0-1.22L13.43 5.3 1.77 12.22V2.99L13.5 1.76 25.23 3v9.24Z"/>
+          <a class="copyright__link" href="#" aria-label="Сайт разработчика">HTML Academy
+            <svg class="copyright__link-img" width="27" height="34" role="img">
+              <use href="../img/sprite.svg#logo-html"></use>>
             </svg>
           </a>
         </div>
